# ComfyUI-Distributed

./: .gitignore  README.md  __init__.py  conftest.py  distributed.py  pyproject.toml
.github/: FUNDING.yml
api/: __init__.py  config_routes.py  endpoint_policy.py  job_routes.py  queue_orchestration.py  queue_request.py  request_guards.py  schemas.py  tunnel_routes.py  usdu_routes.py  worker_routes.py
bootstrap/: __init__.py  entrypoint.py
docs/: comfyui-distributed-api.md
nodes/: __init__.py  branch.py  branch_collector.py  collector.py  context_kwargs.py  distributed_upscale.py  hidden_inputs.py  join.py  list_collector.py  list_splitter.py  queue_wait.py  runtime_helpers.py  utilities.py
tests/: test_async_helpers.py  test_branch.py  test_dispatch_selection.py  test_join.py  test_list_collector.py  test_list_splitter.py  test_load_balance_queueing.py  test_network_helpers.py  test_prompt_transform.py  test_worker_process_runtime.py
upscale/: conditioning.py  job_state.py  job_store.py  job_timeout.py  mode_contexts.py  payload_parsers.py  processing_args.py  result_collector.py  tile_ops.py  tile_processing.py  worker_comms.py
utils/: __init__.py  async_helpers.py  audio_payload.py  auth.py  config.py  constants.py  crop_model_patch.py  image.py  logging.py  network.py  parsing.py  process.py  runtime_state.py  usdu_management.py  usdu_managment.py  usdu_utils.py  worker_ids.py
web/: branch_outputs.js  constants.js  executionUtils.js  image_batch_divider.js  ui.js  workerLifecycle.js
workers/: __init__.py  detection.py  process_manager.py  startup.py  (+1 more)
(+62 files in other folders)
